--- a/frontend/styl/app.styl
+++ b/frontend/styl/app.styl
@@ -1,3 +1,58 @@
 @import "normalize.min.css"
 @import "foundation.min.css"
 @import "font-awesome.css"
+
+body
+  background: url('../images/landing-bg.jpg');
+  color: #39434a;
+  font-family: 'PT Sans', Tahoma, sans-serif;
+  font-size: 18px;
+  line-height: 1.2;
+  text-align: center;
+
+a
+  color: #ed4d96;
+  &:visited
+    color: #9f0049;
+
+.button
+  border: none;
+  box-shadow: none;
+
+.uppercase
+  text-transform: uppercase;
+
+#landing
+  background: white;
+  box-shadow: 0px 0px 3px 0px rgba(198, 198, 198, 0.25);
+  margin: 0 auto;
+  max-width: 850px;
+  padding: 50px 0 0;
+  text-align: center;
+  & small
+    display: inline-block;
+    font-size: 14px;
+    margin-bottom: 25px;
+  & p
+    margin-bottom: 35px;
+  & .big.button
+    height: 130px;
+    width: 50%;
+    &.twitter
+      background: #1ab7ea url("../images/twitter.png") center center no-repeat;
+    &.github
+      background: #1ab7ea url("../images/twitter.png") center center no-repeat;
+
+.team
+  background: #eaeced;
+  margin-bottom: 35px;
+  padding: 25px 0;
+  & div
+    display: inline-block;
+    margin: 0 20px;
+    text-align: center;
+    & img
+      display: block;
+      margin: 0 auto 20px;
+  & .details
+    font-size: 16px;
