deploy initial version

--- a/frontend/styl/app.styl
+++ b/frontend/styl/app.styl
@@ -3,7 +3,7 @@
 @import "font-awesome.css"
 
 body
-  background: url('../images/landing-bg.jpg');
+  background: url(/images/landing-bg.jpg);
   color: #39434a;
   font-family: 'PT Sans', Tahoma, sans-serif;
   font-size: 18px;
@@ -39,9 +39,9 @@ a
     height: 130px;
     width: 50%;
     &.twitter
-      background: #1ab7ea url("../images/twitter.png") center center no-repeat;
+      background: #1ab7ea url("/images/twitter.png") center center no-repeat;
     &.github
-      background: #1ab7ea url("../images/twitter.png") center center no-repeat;
+      background: #1ab7ea url("/images/twitter.png") center center no-repeat;
 
 .team
   background: #eaeced;
