--- a/frontend/styl/app.styl
+++ b/frontend/styl/app.styl
@@ -2,16 +2,12 @@
 @import "foundation.min.css"
 @import "font-awesome.css"
 
-html, 
-body
-  height: 100%;
-
 body
   background: url(/images/landing-bg.jpg);
   color: #39434a;
   font-family: 'PT Sans', Tahoma, sans-serif;
-  font-size: 18px;
-  line-height: 1.2;
+  font-size: 14px;
+  line-height: 1.4;
   position: relative;
   text-align: center;
 
@@ -30,18 +26,20 @@ a
 #landing
   background: white;
   box-shadow: 0px 0px 3px 0px rgba(198, 198, 198, 0.25);
-  margin: 0 auto;
+  margin: 0 auto 50px;
   max-width: 850px;
-  padding: 50px 0 0;
+  padding: 20px 0 0;
+  position: relative;
   text-align: center;
   & small
     display: inline-block;
-    font-size: 14px;
-    margin-bottom: 25px;
+    font-size: 12px;
+    margin-bottom: 15px;
   & p
-    margin-bottom: 35px;
+    line-height: 1.4;
+    margin-bottom: 15px;
   & .big.button
-    height: 130px;
+    height: 90px;
     width: 50%;
     &.twitter
       background: #1ab7ea url("/images/twitter.png") center center no-repeat;
@@ -52,8 +50,8 @@ a
 
 .team
   background: #eaeced;
-  margin-bottom: 35px;
-  padding: 25px 0;
+  margin-bottom: 15px;
+  padding: 25px 0 0;
   & div
     display: inline-block;
     margin: 0 20px;
@@ -62,10 +60,45 @@ a
       display: block;
       margin: 0 auto 20px;
   & .details
-    font-size: 16px;
+    font-size: 14px;
+    margin-bottom: 25px;
 
 .credentials
-  bottom: 5px;
+  bottom: -45px;
   font-size: 12px;
   position: absolute;
   right: 5px;
+
+// medium screens - iPad lanscape
+@media all and (min-width: 570px) and (max-height: 655px) and (max-width: 1008px)
+  #landing .big.button
+    height: 74px;
+    &.twitter
+      background-size: 10%;
+    &.github
+      background-size: 10%;
+
+@media all and (min-width: 570px) and (max-width: 1424px) and (max-height: 780px)
+  #anton img,
+  #maryna img
+    width: 100px;
+
+// for super-big screens
+@media all and (min-width: 1445px)
+  body
+    font-size: 18px;
+
+  #landing
+    padding: 50px 0 0;
+    & p
+      margin-bottom: 35px;
+    & small
+      font-size: 14px;
+      margin-bottom: 25px;
+    & .big.button
+      height: 130px;
+
+  .team
+    margin-bottom: 35px;
+    & .details
+      font-size: 16px;
